# SmartIO

./: .gitmodules  CMakeLists.txt  README.md  SmartIO.cpp
SmartIO/: CMakeLists.txt  SIOCommon.h  SIOParser.cpp  SIOParser.h  SIOStream.cpp  SIOStream.h  SIOStringMapper.cpp  SIOStringMapper.h  SIOTokenWalker.h  SIOTokenizer.cpp  SIOTokenizer.h  SIOTokens.h  SmartIO.cpp  SmartIO.h
SmartIO/AST/: ast.txt
SmartIO/Debugger/: SIODotDebugger.cpp  SIODotDebugger.h
SmartIO/Drafts/: grammar.txt
SmartIO/Parser/: sio_common.h  sio_expr.cpp  sio_expr.h  sio_id.cpp  sio_id.h  sio_logic_expr.cpp  sio_logic_expr.h  sio_program.cpp  sio_program.h
SmartIO/SIONodes/: SIONCommon.h  SIONExpr.cpp  SIONExpr.h  SIONIdentifier.cpp  SIONIdentifier.h  SIONLogicExpr.cpp  SIONLogicExpr.h  SIONProgram.cpp  SIONProgram.h  SIONode.cpp  SIONode.h  grammar.txt
SmartIO/drafts/: dump.txt
SmartIO/internal/: SIOStringMapper.cpp  SIOStringMapper.h  sio_context.cpp  sio_context.h  sio_data.h  sio_define.h
SmartIO/libs/libffi/: libffi-8.lib
SmartIO/parser/: SIOParser.cpp  SIOParser.h  SIOTokenWalker.cpp  SIOTokenWalker.h  SIOTokenizer.cpp  SIOTokenizer.h  sio_debug_win.h
SmartIO/parser/ast/: sio_ast.h
SmartIO/parser/tree/: sio_expr.cpp  sio_expr.h  sio_id.cpp  sio_id.h  sio_tree.h
SmartIO/src/: sio_context.cpp  sio_context.h  sio_data.h  sio_log.cpp  sio_log.h  sio_memory.h  sio_message.h  sio_stream.cpp  sio_stream.h
SmartIO/src/compiler/: sio_ast_walker.h  sio_datatype_validator.h
SmartIO/src/debugger/: sio_dot_debugger.cpp
SmartIO/src/parser/: sio_debug_win.h  sio_parser.cpp  sio_parser.h  sio_program.h  sio_token_walker.cpp  sio_token_walker.h  sio_tokenizer.cpp  sio_tokenizer.h  sio_tokens.h
SmartIO/src/parser/ast/: sio_ast.h  sio_ast_expr.h  sio_ast_id.cpp  sio_ast_id.h  sio_ast_terminal.h
SmartIO/src/parser/dfa/: sio_dfa_expr.cpp  sio_dfa_expr.h  sio_dfa_id.cpp  sio_dfa_id.h  sio_dfa_stmt.cpp  sio_dfa_stmt.h  sio_dfa_tree.h
SmartIO/src/runtime/: sio_native.cpp  sio_native.h  sio_vm.h  sio_vm_state.h
docs/: Build libffi library.md  links.md
drafts/: Syntax.txt  grammar.txt
libs/: CMakeLists.txt
src/: sio_code_insight.cpp  sio_code_insight.h  sio_context.cpp  sio_context.h  sio_define.h  sio_log.cpp  sio_log.h  sio_message.h  sio_stream.cpp  sio_stream.h
src/cl/: core.h  parse.cpp  parse.h
src/compiler/: sio_asm_emiter.h  sio_ast_walker.h
src/debugger/: sio_dot_debugger.h
src/parser/: sio_debug_win.h  sio_dfa_parser.cpp  sio_dfa_parser.h  sio_parser.cpp  sio_token_walker.cpp  sio_token_walker.h  sio_tokenizer.cpp  sio_tokenizer.h  sio_tokens.h
src/parser/ast/: sio_ast.h  sio_ast_expr.h  sio_ast_id.h  sio_ast_terminal.h
src/parser/dfa/: sio_dfa_expr.cpp  sio_dfa_expr.h  sio_dfa_id.cpp  sio_dfa_id.h  sio_dfa_stmt.cpp  sio_dfa_stmt.h  sio_dfa_tree.h
src/parser/util/: sio_token_utils.cpp  sio_token_utils.h
src/runtime/: sio_native.cpp  sio_native.h  sio_vm.h
src/util/: sio_arg_parser.cpp  sio_arg_parser.h  sio_utils.cpp  sio_utils.h
